--- a/public/partials/carta.html
+++ b/public/partials/carta.html
@@ -59,11 +59,11 @@
 						<th class="text-center">
 							<p>{{objetivo.index}}</p>
 							<div class="btn-group-vertical" role="group">
-								<button type="button" class="btn btn-default" title="Editar">
+                                                            <button type="button" class="btn btn-default" title="Editar" ng-click="navigate('/objetivo/'+objetivo._id)">
 									<span class="glyphicon glyphicon-pencil"></span>
 								</button>
 								<button type="button" class="btn btn-default" title="Comentar">
-									<span class="glyphicon glyphicon-comment" ng-class="claseComentarios(objetivo)"></span>
+									<span class="glyphicon glyphicon-comment" ng-class="claseComentarios(objetivo)" ng-click=""></span>
 								</button>
 								<button type="button" class="btn btn-default">
 									<span class="glyphicon glyphicon-link"></span>
@@ -87,10 +87,10 @@
 													</tr>
 												</thead>
 												<tbody>
-													<tr ng-repeat-start="indicadorid in formula.indicadores track by $index">
+													<tr ng-repeat-start="indicadorid in formula.indicadores track by $index" ng-click="setIndicadorSeleccionado(indicadorid)" ng-class="{'danger' : indicadorSeleccionado === indicadorid}">
 														<td style="width:40%">
 														<div class="pull-right">
-															<span class="fa fa-comment" ng-click="indicadores[indicadorid].desplegado = !indicadores[indicadorid].desplegado"></span>
+                                                                                                                    <span class="glyphicon glyphicon-comment" ng-click="indicadores[indicadorid].desplegado = !indicadores[indicadorid].desplegado" ng-class="{'color_note' : existeComentario(indicadores[indicadorid].observaciones['a2015'])}"></span>
 														</div>
 														{{indicadores[indicadorid].nombre}}
 														</td>
@@ -98,13 +98,13 @@
 															<input ng-blur="updateIndicador(indicadorid)" type="text" style="width:3em; font-size:smaller; padding:1px" class="text-right form-control" ng-model="indicadores[indicadorid].valores['a2015'][v]" />
 														</td>
 													</tr>
-													<tr ng-repeat-end ng-if="indicadores[indicadorid].desplegado">
+                                                                                                        <tr ng-repeat-end ng-if="indicadores[indicadorid].desplegado">
 														<td colspan="14">
 															<table class="table table-striped table-bordered table-condensed" style="width:100%">
 																<tbody>
-																	<tr ng-repeat="a in [0,1,2,3,4,5,6,7,8,9,10,11]">
-																		<th style="width:40%">{{$root.meses[a]}}</th>
-																		<td><input ng-blur="updateIndicador(indicadorid)" type="text" class="text-right form-control" style="width:90%" /></td>
+																	<tr ng-repeat="(v,a) in [0,1,2,3,4,5,6,7,8,9,10,11]">
+                                                                                                                                            <th style="width:20%;" class="text-right">{{$root.meses[a]}}</th>
+																		<td><input ng-blur="updateIndicador(indicadorid)" ng-model="indicadores[indicadorid].observaciones['a2015'][v]" type="text" class="form-control" style="width:90%" /></td>
 																	</tr>
 																</tbody>
 															</table>
