--- a/public/partials/carta.html
+++ b/public/partials/carta.html
@@ -124,7 +124,7 @@
 											</table>
 										</td>
 										<td style="text-align:center">
-											<div width="10em" ng-radial-gauge ranges="formula.intervalos" value="formula.valores[aanualidad][ formula.valores[aanualidad].length - 1 ].resultado ? formula.valores[aanualidad][ formula.valores[aanualidad].length - 1 ].resultado.toFixed(0) : 0" value-unit="unit" precision="precision" lower-limit="0" upper-limit="formula.meta"></div>
+											<div width="10em" ng-radial-gauge ranges="formula.intervalos" value="formula.valor[aanualidad]" value-unit="unit" precision="precision" lower-limit="0" upper-limit="formula.meta"></div>
 											<!--
 											<canvas data-gauge-chart maxvalue="100" dato="gaugeChart[objetivo.i].data" value="gaugeChart[objetivo.i].data.val" data-options="gaugeChart[objetivo.i].options" style="width: 120px; height: 60px; " class=""></canvas>
 											{{gaugeChart[objetivo.i].data.val}}
